corrected script tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Smoothie Machine</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
 </head>
 
 <body>
