--- a/index.html
+++ b/index.html
@@ -16,62 +16,62 @@
         <h1>Smoothie Machine</h1>
     </header>
     <main>
-        <p>Use the form below to customize your own smoothie!</p>
+        <h2>Use the form below to customize your smoothie</h2>
         <form action="index.html" method="get">
             <fieldset>
-                <h2>Milk</h2>
-                <input type="radio" name="milk" id="regular">
+                <legend>Choose your milk</legend>
+                <input type="radio" name="milk" id="regular" value="regular">
                 <label for="regular">2% Milk</label>
-                <input type="radio" name="milk" id="chocolate">
+                <input type="radio" name="milk" id="chocolate" value="chocolate">
                 <label for="chocolate">Chocolate Milk</label>
-                <input type="radio" name="milk" id="oatmilk">
+                <input type="radio" name="milk" id="oatmilk" value="oatmilk">
                 <label for="oatmilk">Oatmilk</label>
-                <input type="radio" name="milk" id="soymilk">
+                <input type="radio" name="milk" id="soymilk" value="soymilk">
                 <label for="soymilk">Soy milk</label>
-                <input type="radio" name="milk" id="lactose">
+                <input type="radio" name="milk" id="lactose" value="lactose">
                 <label for="lactose">Lactose-free milk</label>
             </fieldset>
             <fieldset>
-                <h2>Fruit</h2>
-                <input type="checkbox" id="strawberry">
+                <legend>Choose your fruit</legend>
+                <input type="radio" name="fruit" id="strawberry" value="strawberry">
                 <label for="strawberry">Strawberry</label>
 
-                <input type="checkbox" id="blueberry">
+                <input type="radio" name="fruit" id="blueberry" value="blueberry">
                 <label for="blueberry">Blueberry</label>
 
-                <input type="checkbox" id="mango">
+                <input type="radio" name="fruit" id="mango" value="mango">
                 <label for="mango">Mango</label>
 
-                <input type="checkbox" id="bananas">
-                <label for="bananas">Bananas</label>
+                <input type="radio" name="fruit" id="banana" value="banana">
+                <label for="banana">Banana</label>
 
-                <input type="checkbox" id="pineapple">
+                <input type="radio"name="fruit"  id="pineapple" value="pineapple">
                 <label for="pineapple">Pineapple</label>
             </fieldset>
             <fieldset>
-                <h2>Ice</h2>
-                <input type="checkbox" id="ice">
+                <legend>(optional) Add Ice</legend>
+                <input type="checkbox" id="ice" name="ice">
                 <label for="ice">Ice</label>
             </fieldset>
             <fieldset>
-                <h2>Size</h2>
-                <input type="radio" name="size" id="small">
+                <legend>Choose your size</legend>
+                <input type="radio" name="size" id="small" value="small">
                 <label for="small">Small</label>
 
-                <input type="radio" name="size" id="medium">
+                <input type="radio" name="size" id="medium" value="medium">
                 <label for="medium">Medium</label>
 
-                <input type="radio" name="size" id="large">
+                <input type="radio" name="size" id="large" value="large">
                 <label for="large">Large</label>
             </fieldset>
             <button type="submit">Order</button>
             <button type="reset">Clear</button>
-        </form>
         <section>
             <p>Here's your order:</p>
-            <div id="smoothie-order"></div>
+            <div id="smoothieOrder"></div>
         </section>
     </main>
+        </form>
 </body>
 
 </html>
